--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -15,9 +15,9 @@
             
             {% if user.is_authenticated %}
                 <a href="{% url customer:summary %}">Profile</a>
-                <a href="{% url oscar-customer-logout %}">Logout</a>
+                <a href="{% url customer:logout %}">Logout</a>
             {% else %}
-                <a href="{% url oscar-customer-login %}">Login</a>
+                <a href="{% url customer:login %}">Login</a>
             {% endif %}
             
             {% for banner in banners %}
