Product Reviews now use a VoteForm which is more flexible than the previous vote up/down mechanic. The delta is passed rather than an action field, so if an implementation uses something other than up/down voting it'll still work.
I also made it not care if you try and vote multiple times, it'll just update your vote if it already exists. It'll be the job of the template to decide which voting forms to show or hide

update_totals on reviews doesn't get passed a vote anymore, instead it just calculates fresh each time.

--- a/oscar/apps/product/reviews/templates/reviews/reviews.html
+++ b/oscar/apps/product/reviews/templates/reviews/reviews.html
@@ -4,7 +4,7 @@
 
 <h3>All Reviews of {{ item.title }}</h3>
 <p>Read customer reviews on this product. If you have read this book, why not post your own review?</p>
-<p><a href="{% url products:reviews:add item_class_slug=item.item_class.slug item_slug=item.slug item_pk=item.id %}">Add a review</a></p>
+<p><a href="{% url products:reviews-add item_slug=item.slug item_pk=item.id %}">Add a review</a></p>
 
 {% if reviews %}
 	<h4> Sort by: </h4>
@@ -23,18 +23,9 @@
             <p>{{ review.date_created }}<p>
             <p>{{ review.body|linebreaks }}</p>
             <p><a href="{{ review.get_absolute_url }}">Permalink</a>
-            {% if user.is_authenticated %}
-                <form action="{{ review.get_absolute_url }}" method="post">
-                    {% csrf_token %}               
-                    <input type="hidden" name="action" value="vote_up"/>
-                    <input type="submit" value="I agree" /> 
-                </form>
-                <form  action="{{ review.get_absolute_url }}" method="post">
-                    {% csrf_token %}                
-                    <input type="hidden" name="action" value="vote_down"/>
-                    <input type="submit" value="I disagree" /> 
-                </form>
-            {% endif %}
+            
+			{% include 'reviews/_vote_bit.html' %}
+	
             {% if review.has_votes %}
                 <p>{{ review.num_up_votes }} customers agreed.</p>
             {% endif %}
