--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -30,7 +30,7 @@
             to this page.
             
             Basket total: {{ basket.total_incl_tax|currency }}
-            <a href="{% url oscar-basket %}">View basket</a>
+            <a href="{% url basket %}">View basket</a>
             
             {% block header %}
             {% endblock %}
