--- a/oscar/templates/oscar/checkout/user_address_form.html
+++ b/oscar/templates/oscar/checkout/user_address_form.html
@@ -4,10 +4,10 @@
 {% block shipping_address %}
 
 <h4>Enter a shipping address</h4>
-<form action="{% url oscar-checkout-user-address-create %}" method="post">
+<form action="{{ form_url }}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <p><input type="submit" value="Save shipping address" /></p>
+    <p><input type="submit" value="Save address" /></p>
 </form>
 
 {% endblock shipping_address %}
