--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -6,7 +6,7 @@
 {% block layout %}
     <div id="container">
         <div id="header">
-            <h1><a href="{% url home %}">Oscar // Flexible e-commerce for Django</a></h1>
+            <p><a href="{% url home %}">Oscar // Flexible e-commerce for Django</a></p>
             
             <form method="get" action="{% url oscar-search %}">
                 {{ search_form.as_p }}
@@ -30,7 +30,7 @@
             to this page.
             
             Basket total: {{ basket.total_incl_tax|currency }}
-            <a href="{% url basket %}">View basket</a>
+            <a href="{% url basket:summary %}">View basket</a>
             
             {% block header %}
             {% endblock %}
