--- a/oscar/apps/customer/templates/customer/email.html
+++ b/oscar/apps/customer/templates/customer/email.html
@@ -25,7 +25,7 @@
     </tr>
 </table>
 
-<p><a href="{% url oscar-customer-email-history %}">Return to email history</a></p>
+<p><a href="{% url customer:email-list %}">Return to email history</a></p>
 
 {% endblock content %}
 
