--- a/oscar/templates/oscar/checkout/user_address_form.html
+++ b/oscar/templates/oscar/checkout/user_address_form.html
@@ -3,7 +3,7 @@
 
 {% block shipping_address %}
 
-<h4>Enter a shipping address</h4>
+<h4>Enter an address for your addressbook</h4>
 <form action="{{ form_url }}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
