Converted checkout app to new structure

--- a/oscar/apps/basket/templates/basket/basket.html
+++ b/oscar/apps/basket/templates/basket/basket.html
@@ -63,7 +63,7 @@
 
 </form>
 
-<a href="{% url oscar-checkout-index %}">Checkout</a>
+<a href="{% url checkout:index %}">Checkout</a>
 
 {% else %}
 
