--- a/oscar/apps/checkout/templates/checkout/checkout.html
+++ b/oscar/apps/checkout/templates/checkout/checkout.html
@@ -84,7 +84,7 @@
     </tr>
     {% endif %} 
 </table>
-<a href="{% url oscar-checkout-shipping-address %}">Change shipping address</a>
+<a href="{% url checkout:shipping-address %}">Change shipping address</a>
 {% endblock shipping_address %}
 
 <hr />
