--- a/oscar/apps/customer/templates/customer/order.html
+++ b/oscar/apps/customer/templates/customer/order.html
@@ -63,7 +63,7 @@
                 <input type="hidden" name="action" value="reorder" />
                 <input type="submit" value="Re-order" />
             </form>
-            <a href="{% url products:review-add line.product.slug line.product.id %}">Write a review</a>
+            <a href="{% url products:reviews-add line.product.slug line.product.id %}">Write a review</a>
         </td>
     </tr>
     {% endfor %}
