--- a/oscar/apps/checkout/templates/checkout/preview.html
+++ b/oscar/apps/checkout/templates/checkout/preview.html
@@ -3,7 +3,7 @@
 {% block place_order %}
 <hr/>
 <h3>Place your order</h3>
-<form method="post" action="{% url oscar-checkout-payment-details %}">
+<form method="post" action="{% url checkout:payment-details %}">
 {% csrf_token %}
 <input type="submit" value="Place order" />
 </form>
