--- a/oscar/apps/order_management/templates/order_management/browse.html
+++ b/oscar/apps/order_management/templates/order_management/browse.html
@@ -6,7 +6,7 @@
 <h2>Order management</h2>
 {% endblock header %}
 {% block content %}
-<form method="get" action="{% url oscar-order-management-list %}">
+<form method="get" action="{% url order-management:list %}">
     {{ order_simple_search_form.as_p }}
     <input type="submit" nane="simple_search" value="Search" />
 </form>
@@ -33,7 +33,7 @@
         <td>{{ order.billing_address }}</td>
         <td>{{ order.date_placed }}</td>
         <td>
-            <a href="{% url oscar-order-management-order order.number %}">View</a>
+            <a href="{% url order-management:detail order.number %}">View</a>
         </td>
     </tr>
     {% endfor %}
