Converted final two apps over to new structure

--- a/examples/vanilla/templates/layout.html
+++ b/examples/vanilla/templates/layout.html
@@ -8,7 +8,7 @@
         <div id="header">
             <p><a href="{% url promotions:home %}">Oscar // Flexible e-commerce for Django</a></p>
             
-            <form method="get" action="{% url oscar-search %}">
+            <form method="get" action="{% url search:search %}">
                 {{ search_form.as_p }}
                 <input type="submit" value="Go!" /> 
             </form>
