--- a/examples/vanilla/templates/layout.html
+++ b/examples/vanilla/templates/layout.html
@@ -20,10 +20,6 @@
                 <a href="{% url customer:login %}">Login</a>
             {% endif %}
             
-            {% for banner in banners %}
-                {{ banner.get_banner_html|safe }}
-            {% endfor %}
-
             Add a:
             <a href="/admin/promotions/pagepromotion/add/?page_url={{ url_path }}" >promotion</a> /
             <a href="/admin/promotions/pagemerchandisingblock/add/?page_url={{ url_path }}" >merchandising block</a>
@@ -45,9 +41,11 @@
             </ul>
             {% endif %}
             
-            {% for linked_block in merchandising_blocks %}
-                {% render_merchandising_block linked_block %}
+            <div id="promotions">
+            {% for promotion in promotions_top %}
+                {% render_promotion promotion %}
             {% endfor %}
+            </div>
             
             {% block content %}{% endblock %}
         </div>
