--- a/oscar/templates/promotions/automaticproductlist.html
+++ b/oscar/templates/promotions/automaticproductlist.html
@@ -5,7 +5,7 @@
 <p>{{ promotion.description }}</p>
 
 <ol>
-{% for product in promotion.products.all %}
+{% for product in promotion.get_products %}
 <li>
     <a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a><br/>
     {% if product.is_group %}
