Added a dummy static file to the vanilla install

--- a/examples/vanilla/templates/base.html
+++ b/examples/vanilla/templates/base.html
@@ -6,6 +6,7 @@
         <meta name="created" content='{% now "jS M Y h:i" %}' />
         <meta name="description" content="{% block description %}{% endblock %}" />
         <meta name="keywords" content="{% block keywords %}{% endblock %}" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/base/screen.css" />
         {% block extra_head %}{% endblock %}
     </head>
     <body id="{% block body_id %}default{% endblock %}" class="{% block body_class %}default{% endblock %}">
