--- a/examples/vanilla/templates/layout.html
+++ b/examples/vanilla/templates/layout.html
@@ -2,6 +2,7 @@
 
 {% load currency_filters %}
 {% load promotions %}
+{% load category_tags %}
 
 {% block layout %}
     <div id="container">
@@ -22,6 +23,24 @@
             
             Basket total: {{ basket.total_incl_tax|currency }}
             <a href="{% url basket:summary %}">View basket</a>
+            
+			{% category_tree depth=2 as categories %}
+			
+			{% if categories %}
+			<ul>
+			{% for category in categories %}
+			<li><a href="{{ category.0.get_absolute_url }}">{{ category.0.name }}</a>
+				{% if category.1 %}
+				<ul>
+				{% for subcategory in category.1 %}
+				<li><a href="{{ subcategory.0.get_absolute_url }}">{{ subcategory.0.name }}</a>
+				{% endfor %}
+				</ul>
+				{% endif %}
+			</li>
+			{% endfor %}
+			</ul>
+			{% endif %}
             
             {% block header %}
             {% endblock %}
