--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -5,13 +5,13 @@
 {% load basket_tags %}
 
 {% block header %}
-    <h1>{{ item.get_title }}</h1>
+    <h1>{{ product.get_title }}</h1>
 {% endblock header %}
 
 
 {% block content %}
 <div class="images">
-    {% for image in item.images.all %}
+    {% for image in product.images.all %}
         <img src="{{ imageurl }}" width="200" height="200">
         {% if image.caption %}
             <div class="caption">{{ image.caption }}</div>
@@ -22,30 +22,30 @@
 <table>
     <caption>Product details</caption>
     <tr>
-        <th>UPC</th><td>{{item.upc}}</td>
+        <th>UPC</th><td>{{ product.upc }}</td>
     </tr>
     <tr>
-        <th>Product class</th><td>{{item.product_class.name}}</td>
+        <th>Product class</th><td>{{ product.product_class.name }}</td>
     </tr>
-    {% if item.stockrecord %}
+    {% if product.stockrecord %}
     <tr>
-        <th>Price (excl. tax)</th><td>{{item.stockrecord.price_incl_tax|currency}}</td>
+        <th>Price (excl. tax)</th><td>{{ product.stockrecord.price_incl_tax|currency }}</td>
     </tr>
     <tr>
-        <th>Price (incl. tax)</th><td>{{item.stockrecord.price_excl_tax|currency}}</td>
+        <th>Price (incl. tax)</th><td>{{ product.stockrecord.price_excl_tax|currency }}</td>
     </tr>
     <tr>
         <th>Availability</th>
-        <td>{{ item.stockrecord.availability }}</td>
+        <td>{{ product.stockrecord.availability }}</td>
     </tr>
     {% endif %}
     <tr>
         <th>Product type</th>
         <td>
-        {% if item.is_group %}Product group{% else %}{% if item.is_variant %}Variant{% else %}Stand-alone{% endif %}{% endif %}
+        {% if product.is_group %}Product group{% else %}{% if product.is_variant %}Variant{% else %}Stand-alone{% endif %}{% endif %}
         </td>
     </tr>
-    {% for attribute in item.attributes.all %}
+    {% for attribute in product.attributes.all %}
     <tr>
         <th>{{ attribute.type.name }}</th>
         <td>{{ attribute.value }}</td>
@@ -62,9 +62,9 @@
     
 </table>
 
-{% if item.stockrecord %}
+{% if product.stockrecord %}
 
-{% basket_form item as basket_form %}
+{% basket_form product as basket_form %}
 
 <form action="{% url basket:add %}" method="post">
     {% csrf_token %}
@@ -74,7 +74,7 @@
 {% endif %}
 
 <h2>Categories</h2>
-{% for category in item.categories.all %}
+{% for category in product.categories.all %}
 <p>
 {% for c in category.get_ancestors %}
 {% if not forloop.first %} > {% endif %}<a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
@@ -87,10 +87,10 @@
 <h2>Customer Reviews</h2>
 <p>Read customer reviews on this product. If you have read this book, why not post your own
    review?</p>
-<p><a href="{% url catalogue:reviews-add item.slug item.id %}">Add a review</a></p>
+<p><a href="{% url catalogue:reviews-add product.slug product.id %}">Add a review</a></p>
 
 
-{% with item.reviews.all as reviews %}
+{% with product.reviews.all as reviews %}
 {% if reviews %}
     <div>
         {% for review in reviews|slice:":3" %}
@@ -108,29 +108,29 @@
                 {% endif %}
             </div>
         {% endfor %}
-        <p><a href="{% url catalogue:reviews-list item.slug item.id %}">See all reviews</a>.</p>
+        <p><a href="{% url catalogue:reviews-list product.slug product.id %}">See all reviews</a>.</p>
     </div>
 {% endif %}
 {% endwith %}
 
 {% endblock product_review %}
 
-{% if item.related_items.count %}
+{% if product.related_items.count %}
 <div class="products">
     <h4>Related items</h4>
     <ul>
-    {% for product in item.related_items.all %}
+    {% for product in product.related_items.all %}
         <li><a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a></li>
     {% endfor %}
     </ul>
 </div>
 {% endif %}
 
-{% if item.recommended_items.count %}
+{% if product.recommended_items.count %}
 <div class="products">
     <h4>Recommended items</h4>
     <ul>
-    {% for product in item.recommended_items.all %}
+    {% for product in product.recommended_items.all %}
         <li><a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a></li>
     {% endfor %}
     </ul>
