--- a/oscar/templates/reviews/review.html
+++ b/oscar/templates/reviews/review.html
@@ -2,8 +2,8 @@
 
 {% block product_review %}
 {% if review %}		
-		<h4> {{ review.title }} </h4>
-		<p> Score: {{ review.score|floatformat:1 }} / 5.0</p>
-		<p> Comments: {{ review.body }}</p>						
+    <h4 id="review-{{ review.pk }}"> {{ review.title }} </h4>
+    <p> Score: {{ review.score|floatformat:1 }} / 5.0</p>
+    <p> Comments: {{ review.body }}</p>						
 {% endif %}
 {% endblock %}
