Fixed bug with basket template tag.
The template tag was not passing the basket through to the AddToBasket
form, causing a bug.  Not spotted in other projects as they define their
own add-to-basket forms.

--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -64,7 +64,7 @@
 
 {% if product.stockrecord %}
 
-{% basket_form product as basket_form %}
+{% basket_form basket product as basket_form %}
 
 <form action="{% url basket:add %}" method="post">
     {% csrf_token %}
