--- a/oscar/templates/catalogue/browse.html
+++ b/oscar/templates/catalogue/browse.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-
 {% load currency_filters %}
+{% load basket_tags %}
 
 {% block header %}
 <h1>{{ summary }}</h1>
@@ -29,6 +29,12 @@
             Not available    
         {% endif %}
     {% endif %}    
+    {% basket_form basket product as basket_form %}
+    <form action="{% url basket:add %}" method="post">
+        {% csrf_token %}
+        {{ basket_form.as_p }}
+        <input type="submit" value="Add to basket" />
+    </form>
 </li>
 {% endfor %}
 </ol>
