Added order detail page with line batch actions

--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -3,5 +3,9 @@
 {% block content %}
 
 <h1>Dashboard</h1>
+<p>What do you want to do?</p>
+<ul>
+    <li><a href="{% url dashboard:orders %}">Manage orders</a></li>
+</ul>
 
 {% endblock %}
