Moved reporting app into dashboard

--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -6,6 +6,7 @@
 <p>What do you want to do?</p>
 <ul>
     <li><a href="{% url dashboard:orders %}">Manage orders</a></li>
+	<li><a href="{% url dashboard:reports-index %}">View reports</a></li>
 </ul>
 
 {% endblock %}
